@@ -2,7 +2,6 @@ package io.github.acoboh.query.filter.jpa.processor;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -27,7 +26,6 @@ import com.google.common.collect.Sets;
 
 import io.github.acoboh.query.filter.jpa.annotations.QFDefinitionClass;
 import io.github.acoboh.query.filter.jpa.exceptions.QFBlockException;
-import io.github.acoboh.query.filter.jpa.exceptions.QFCollectionException;
 import io.github.acoboh.query.filter.jpa.exceptions.QFDiscriminatorNotFoundException;
 import io.github.acoboh.query.filter.jpa.exceptions.QFFieldNotFoundException;
 import io.github.acoboh.query.filter.jpa.exceptions.QFJsonParseException;
@@ -45,7 +43,6 @@ import io.github.acoboh.query.filter.jpa.processor.definitions.QFDefinitionColle
 import io.github.acoboh.query.filter.jpa.processor.definitions.QFDefinitionDiscriminator;
 import io.github.acoboh.query.filter.jpa.processor.definitions.QFDefinitionElement;
 import io.github.acoboh.query.filter.jpa.processor.definitions.QFDefinitionJson;
-import io.github.acoboh.query.filter.jpa.processor.definitions.QFDefinitionSortable;
 import io.github.acoboh.query.filter.jpa.processor.definitions.traits.IDefinitionSortable;
 import io.github.acoboh.query.filter.jpa.processor.match.QFCollectionMatch;
 import io.github.acoboh.query.filter.jpa.processor.match.QFDiscriminatorMatch;
@@ -54,12 +51,10 @@ import io.github.acoboh.query.filter.jpa.processor.match.QFJsonElementMatch;
 import io.github.acoboh.query.filter.jpa.spel.SpelResolverContext;
 import jakarta.persistence.criteria.CriteriaBuilder;
 import jakarta.persistence.criteria.CriteriaQuery;
-import jakarta.persistence.criteria.Expression;
 import jakarta.persistence.criteria.Order;
 import jakarta.persistence.criteria.Path;
 import jakarta.persistence.criteria.Predicate;
 import jakarta.persistence.criteria.Root;
-import jakarta.persistence.criteria.Subquery;
 
 /**
  * Class that implements {@linkplain Specification} from JPA library that allows the user to create automatic filters from
@@ -73,22 +68,25 @@ public class QueryFilter<E> implements Specification<E> {
 
 	private static final Logger LOGGER = LoggerFactory.getLogger(QueryFilter.class);
 
+	private static final String FIELD_NOT_NULL_MESSAGE = "field cannot be null";
+	private static final String OPERATION_NOT_NULL_MESSAGE = "operation cannot be null";
+	private static final String VALUES_NOT_NULL_MESSAGE = "values cannot be null";
+
 	private static final long serialVersionUID = 1L;
 
-	private static final String REGEX_SORT = "^[a-zA-Z0-9]+=([+-]?[a-zA-Z0-9]+)(,[+-]?[a-zA-Z0-9]+)*$";
+	private static final String REGEX_SORT = "^[a-zA-Z0-9]+=([+-]?[a-zA-Z0-9]+)(,[+-]?[a-zA-Z0-9]+)*+$";
 	private static final Pattern REGEX_PATTERN = Pattern.compile("([+-])([a-zA-Z0-9]+)");
 
 	private final String initialInput;
 
-	private final List<QFElementMatch> valueMapping = new ArrayList<>();
-	private final List<QFCollectionMatch> collectionMapping = new ArrayList<>();
-	private final List<QFJsonElementMatch> jsonMapping = new ArrayList<>();
-	private final List<QFDiscriminatorMatch> discriminatorMapping = new ArrayList<>();
+	private final QFSpecificationsWarp specificationsWarp;
+
 	private final transient @Nullable Map<String, PredicateProcessorResolutor> predicateMap;
 
-	private final transient List<QFElementMatch> defaultMatches;
 	private final transient List<Pair<IDefinitionSortable, Direction>> defaultSorting;
+
 	private final transient Map<String, QFAbstractDefinition> definitionMap;
+
 	private final transient QFDefinitionClass queryFilterClassAnnotation;
 
 	private boolean defaultSortEnabled = true;
@@ -115,7 +113,8 @@ public class QueryFilter<E> implements Specification<E> {
 
 		this.definitionMap = processor.getDefinitionMap();
 		this.queryFilterClassAnnotation = processor.getDefinitionClassAnnotation();
-		this.defaultMatches = processor.getDefaultMatches();
+
+		this.specificationsWarp = new QFSpecificationsWarp(processor.getDefaultMatches());
 
 		this.defaultSorting = processor.getDefaultSorting();
 		this.entityClass = processor.getEntityClass();
@@ -191,23 +190,24 @@ public class QueryFilter<E> implements Specification<E> {
 			throw new QFBlockException(field);
 		}
 
+		QFSpecificationPart qfSpecificationPart;
 		if (def instanceof QFDefinitionElement qdef) {
-			QFElementMatch match = new QFElementMatch(Arrays.asList(value.split(",")), QFOperationEnum.fromValue(op),
+			qfSpecificationPart = new QFElementMatch(Arrays.asList(value.split(",")), QFOperationEnum.fromValue(op),
 					qdef);
-			valueMapping.add(match);
 		} else if (def instanceof QFDefinitionDiscriminator qdef) {
-			QFDiscriminatorMatch match = new QFDiscriminatorMatch(Arrays.asList(value.split(",")), qdef);
-			discriminatorMapping.add(match);
+			qfSpecificationPart = new QFDiscriminatorMatch(Arrays.asList(value.split(",")), qdef);
+
 		} else if (def instanceof QFDefinitionJson qdef) {
-			QFJsonElementMatch match = new QFJsonElementMatch(value, QFOperationJsonEnum.fromValue(op), qdef);
-			jsonMapping.add(match);
+			qfSpecificationPart = new QFJsonElementMatch(value, QFOperationJsonEnum.fromValue(op), qdef);
+
 		} else if (def instanceof QFDefinitionCollection qdef) {
-			QFCollectionMatch match = new QFCollectionMatch(qdef, QFCollectionOperationEnum.fromValue(op),
+			qfSpecificationPart = new QFCollectionMatch(qdef, QFCollectionOperationEnum.fromValue(op),
 					Integer.valueOf(value));
-			collectionMapping.add(match);
 		} else {
 			throw new QFNotValuable(field);
 		}
+
+		specificationsWarp.addSpecification(qfSpecificationPart);
 
 	}
 
@@ -283,24 +283,25 @@ public class QueryFilter<E> implements Specification<E> {
 	public void addNewField(String field, QFOperationEnum operation, List<String> values)
 			throws QFFieldNotFoundException, QFDiscriminatorNotFoundException {
 
-		Assert.notNull(field, "field cannot be null");
-		Assert.notNull(operation, "operation cannot be null");
-		Assert.notNull(values, "values cannot be null");
+		Assert.notNull(field, FIELD_NOT_NULL_MESSAGE);
+		Assert.notNull(operation, OPERATION_NOT_NULL_MESSAGE);
+		Assert.notNull(values, VALUES_NOT_NULL_MESSAGE);
 
 		QFAbstractDefinition def = definitionMap.get(field);
 		if (def == null) {
 			throw new QFFieldNotFoundException(field);
 		}
 
+		QFSpecificationPart qfSpecificationPart;
 		if (def instanceof QFDefinitionElement qdef) {
-			QFElementMatch match = new QFElementMatch(values, operation, qdef);
-			valueMapping.add(match);
+			qfSpecificationPart = new QFElementMatch(values, operation, qdef);
 		} else if (def instanceof QFDefinitionDiscriminator qdef) {
-			QFDiscriminatorMatch match = new QFDiscriminatorMatch(values, qdef);
-			discriminatorMapping.add(match);
+			qfSpecificationPart = new QFDiscriminatorMatch(values, qdef);
 		} else {
 			throw new QFNotValuable(field);
 		}
+
+		specificationsWarp.addSpecification(qfSpecificationPart);
 
 	}
 
@@ -312,9 +313,9 @@ public class QueryFilter<E> implements Specification<E> {
 	 * @param value     json value as string
 	 */
 	public void addNewField(String field, QFOperationJsonEnum operation, String value) {
-		Assert.notNull(field, "field cannot be null");
-		Assert.notNull(operation, "operation cannot be null");
-		Assert.notNull(value, "value cannot be null");
+		Assert.notNull(field, FIELD_NOT_NULL_MESSAGE);
+		Assert.notNull(operation, OPERATION_NOT_NULL_MESSAGE);
+		Assert.notNull(value, VALUES_NOT_NULL_MESSAGE);
 
 		QFAbstractDefinition def = definitionMap.get(field);
 		if (def == null) {
@@ -326,7 +327,7 @@ public class QueryFilter<E> implements Specification<E> {
 		}
 
 		QFJsonElementMatch match = new QFJsonElementMatch(value, operation, (QFDefinitionJson) def);
-		jsonMapping.add(match);
+		specificationsWarp.addSpecification(match);
 
 	}
 
@@ -339,8 +340,8 @@ public class QueryFilter<E> implements Specification<E> {
 	 */
 	public void addNewField(String field, QFCollectionOperationEnum operation, int value) {
 
-		Assert.notNull(field, "field cannot be null");
-		Assert.notNull(operation, "operation cannot be null");
+		Assert.notNull(field, FIELD_NOT_NULL_MESSAGE);
+		Assert.notNull(operation, OPERATION_NOT_NULL_MESSAGE);
 
 		QFAbstractDefinition def = definitionMap.get(field);
 		if (def == null) {
@@ -352,7 +353,7 @@ public class QueryFilter<E> implements Specification<E> {
 		}
 
 		QFCollectionMatch match = new QFCollectionMatch((QFDefinitionCollection) def, operation, value);
-		collectionMapping.add(match);
+		specificationsWarp.addSpecification(match);
 
 	}
 
@@ -368,9 +369,9 @@ public class QueryFilter<E> implements Specification<E> {
 	public void addNewField(String field, QFOperationEnum operation, String value)
 			throws QFFieldNotFoundException, QFDiscriminatorNotFoundException {
 
-		Assert.notNull(field, "field cannot be null");
-		Assert.notNull(operation, "operation cannot be null");
-		Assert.notNull(value, "value cannot be null");
+		Assert.notNull(field, FIELD_NOT_NULL_MESSAGE);
+		Assert.notNull(operation, OPERATION_NOT_NULL_MESSAGE);
+		Assert.notNull(value, VALUES_NOT_NULL_MESSAGE);
 
 		List<String> values = Arrays.asList(value.split(","));
 		addNewField(field, operation, values);
@@ -433,8 +434,7 @@ public class QueryFilter<E> implements Specification<E> {
 	 */
 	public List<Pair<String, Direction>> getSortFields() {
 		var sortList = defaultSortEnabled ? defaultSorting : sortDefinitionList;
-		return sortList.stream().map(e -> Pair.of(e.getFirst().getFilterName(), e.getSecond()))
-				.collect(Collectors.toList());
+		return sortList.stream().map(e -> Pair.of(e.getFirst().getFilterName(), e.getSecond())).toList();
 	}
 
 	/**
@@ -455,7 +455,7 @@ public class QueryFilter<E> implements Specification<E> {
 	 * @return true if the field is present, false otherwise
 	 */
 	public boolean isFiltering(String field) {
-		return valueMapping.stream().anyMatch(e -> e.getDefinition().getFilterName().equals(field));
+		return specificationsWarp.getAllParts().stream().anyMatch(e -> e.getDefinition().getFilterName().equals(field));
 	}
 
 	/**
@@ -466,7 +466,7 @@ public class QueryFilter<E> implements Specification<E> {
 	 */
 	public boolean isFilteringAny(String... fields) {
 		Set<String> set = Sets.newHashSet(fields);
-		return valueMapping.stream().anyMatch(e -> set.contains(e.getDefinition().getFilterName()));
+		return specificationsWarp.getAllParts().stream().anyMatch(e -> set.contains(e.getDefinition().getFilterName()));
 	}
 
 	/**
@@ -482,9 +482,9 @@ public class QueryFilter<E> implements Specification<E> {
 	public void overrideField(String field, QFOperationEnum operation, String value)
 			throws QFFieldNotFoundException, QFDiscriminatorNotFoundException, QFJsonParseException {
 
-		Assert.notNull(field, "field cannot be null");
-		Assert.notNull(operation, "operation cannot be null");
-		Assert.notNull(value, "value cannot be null");
+		Assert.notNull(field, FIELD_NOT_NULL_MESSAGE);
+		Assert.notNull(operation, OPERATION_NOT_NULL_MESSAGE);
+		Assert.notNull(value, VALUES_NOT_NULL_MESSAGE);
 
 		QFAbstractDefinition def = definitionMap.get(field);
 		if (def == null) {
@@ -492,13 +492,13 @@ public class QueryFilter<E> implements Specification<E> {
 		}
 
 		if (def instanceof QFDefinitionElement qdef) {
-			valueMapping.removeIf(e -> e.getDefinition().getFilterName().equals(field));
+			specificationsWarp.deleteSpecificationField(field);
 			QFElementMatch match = new QFElementMatch(Arrays.asList(value.split(",")), operation, qdef);
-			valueMapping.add(match);
+			specificationsWarp.addSpecification(match);
 		} else if (def instanceof QFDefinitionDiscriminator qdef) {
-			discriminatorMapping.removeIf(e -> e.getDefinition().getFilterName().equals(field));
+			specificationsWarp.deleteSpecificationField(field);
 			QFDiscriminatorMatch match = new QFDiscriminatorMatch(Arrays.asList(value.split(",")), qdef);
-			discriminatorMapping.add(match);
+			specificationsWarp.addSpecification(match);
 		} else {
 			throw new QFNotValuable(field);
 		}
@@ -518,9 +518,9 @@ public class QueryFilter<E> implements Specification<E> {
 	public void overrideField(String field, QFOperationJsonEnum operationJson, String value)
 			throws QFFieldNotFoundException, QFNotValuable {
 
-		Assert.notNull(field, "field cannot be null");
-		Assert.notNull(operationJson, "operation cannot be null");
-		Assert.notNull(value, "value cannot be null");
+		Assert.notNull(field, FIELD_NOT_NULL_MESSAGE);
+		Assert.notNull(operationJson, OPERATION_NOT_NULL_MESSAGE);
+		Assert.notNull(value, VALUES_NOT_NULL_MESSAGE);
 
 		QFAbstractDefinition def = definitionMap.get(field);
 		if (def == null) {
@@ -531,9 +531,9 @@ public class QueryFilter<E> implements Specification<E> {
 			throw new QFNotValuable(field);
 		}
 
-		jsonMapping.removeIf(e -> e.getDefinition().getFilterName().equals(field));
+		specificationsWarp.deleteSpecificationField(field);
 		QFJsonElementMatch match = new QFJsonElementMatch(value, operationJson, (QFDefinitionJson) def);
-		jsonMapping.add(match);
+		specificationsWarp.addSpecification(match);
 
 	}
 
@@ -549,8 +549,8 @@ public class QueryFilter<E> implements Specification<E> {
 	public void overrideField(String field, QFCollectionOperationEnum operationCollection, int value)
 			throws QFFieldNotFoundException, QFNotValuable {
 
-		Assert.notNull(field, "field cannot be null");
-		Assert.notNull(operationCollection, "operation cannot be null");
+		Assert.notNull(field, FIELD_NOT_NULL_MESSAGE);
+		Assert.notNull(operationCollection, OPERATION_NOT_NULL_MESSAGE);
 
 		QFAbstractDefinition def = definitionMap.get(field);
 		if (def == null) {
@@ -561,9 +561,9 @@ public class QueryFilter<E> implements Specification<E> {
 			throw new QFNotValuable(field);
 		}
 
-		collectionMapping.removeIf(e -> e.getDefinition().getFilterName().equals(field));
+		specificationsWarp.deleteSpecificationField(field);
 		QFCollectionMatch match = new QFCollectionMatch((QFDefinitionCollection) def, operationCollection, value);
-		collectionMapping.add(match);
+		specificationsWarp.addSpecification(match);
 	}
 
 	/**
@@ -580,17 +580,18 @@ public class QueryFilter<E> implements Specification<E> {
 			throw new QFFieldNotFoundException(field);
 		}
 
-		if (def instanceof QFDefinitionElement) {
-			return valueMapping.stream().filter(e -> e.getDefinition().getFilterName().equals(field))
-					.map(QFElementMatch::getOriginalValues).findAny().orElse(null);
-		} else if (def instanceof QFDefinitionDiscriminator) {
-			return discriminatorMapping.stream().filter(e -> e.getDefinition().getFilterName().equals(field))
-					.map(QFDiscriminatorMatch::getValues).findFirst().orElse(null);
-		} else if (def instanceof QFDefinitionJson) {
-			throw new UnsupportedOperationException("Unsupported get list values of Json fields");
+		QFSpecificationPart qfSpec = specificationsWarp.getAllParts().stream()
+				.filter(e -> e.getDefinition().getFilterName().equals(field)).findFirst().orElse(null);
+		if (qfSpec == null) {
+			return null;
+		} else if (qfSpec instanceof QFElementMatch qfEMatch) {
+			return qfEMatch.getOriginalValues();
+		} else if (qfSpec instanceof QFDiscriminatorMatch qfDMatch) {
+			return qfDMatch.getValues();
 		}
 
-		return null;
+		throw new UnsupportedOperationException(
+				"Unsupported get list values for non QFElementMatch or QFDiscriminatorMatch classes");
 
 	}
 
@@ -611,8 +612,17 @@ public class QueryFilter<E> implements Specification<E> {
 			return null;
 		}
 
-		return jsonMapping.stream().filter(e -> e.getDefinition().getFilterName().equals(field))
-				.map(QFJsonElementMatch::getMapValues).findFirst().orElse(null);
+		QFSpecificationPart qfSpec = specificationsWarp.getAllParts().stream()
+				.filter(e -> e.getDefinition().getFilterName().equals(field)).findFirst().orElse(null);
+
+		if (qfSpec == null) {
+			return null;
+		} else if (qfSpec instanceof QFJsonElementMatch json) {
+			return json.getMapValues();
+		}
+
+		throw new UnsupportedOperationException("Unsupported get map values of non QFJsonElementMatch classes");
+
 	}
 
 	/**
@@ -632,8 +642,17 @@ public class QueryFilter<E> implements Specification<E> {
 			return null;
 		}
 
-		return collectionMapping.stream().filter(e -> e.getDefinition().getFilterName().equals(field))
-				.map(QFCollectionMatch::getValue).findFirst().orElse(null);
+		QFSpecificationPart qfSpec = specificationsWarp.getAllParts().stream()
+				.filter(e -> e.getDefinition().getFilterName().equals(field)).findFirst().orElse(null);
+
+		if (qfSpec == null) {
+			return null;
+		} else if (qfSpec instanceof QFCollectionMatch match) {
+			return match.getValue();
+		}
+
+		throw new UnsupportedOperationException(
+				"Unsupported get actual collection value non QFCollectionMatch classes");
 	}
 
 	/**
@@ -649,19 +668,7 @@ public class QueryFilter<E> implements Specification<E> {
 			throw new QFFieldNotFoundException(field);
 		}
 
-		if (def instanceof QFDefinitionElement) {
-			valueMapping.removeIf(e -> e.getDefinition().getFilterName().equals(field));
-		} else if (def instanceof QFDefinitionDiscriminator) {
-			discriminatorMapping.removeIf(e -> e.getDefinition().getFilterName().equals(field));
-		} else if (def instanceof QFDefinitionJson) {
-			jsonMapping.removeIf(e -> e.getDefinition().getFilterName().equals(field));
-		} else if (def instanceof QFDefinitionSortable) {
-			LOGGER.trace("Disabled default sorting");
-			this.defaultSortEnabled = false;
-			this.sortDefinitionList.removeIf(e -> e.getFirst().getFilterName().equals(field));
-		} else if (def instanceof QFDefinitionCollection) {
-			collectionMapping.removeIf(e -> e.getDefinition().getFilterName().equals(field));
-		}
+		specificationsWarp.deleteSpecificationField(field);
 
 	}
 
@@ -724,47 +731,18 @@ public class QueryFilter<E> implements Specification<E> {
 		Map<String, List<Predicate>> predicatesMap = new HashMap<>();
 		Map<String, Path<?>> pathsMap = new HashMap<>();
 
-		List<QFElementMatch> toMatch = new ArrayList<>();
-		LOGGER.trace("Checking default values");
-		for (QFElementMatch match : defaultMatches) {
-
-			if (valueMapping.stream().noneMatch(e -> e.getDefinition().equals(match.getDefinition()))) {
-				toMatch.add(match);
-			}
-
-		}
-
-		toMatch.addAll(valueMapping);
-		toMatch.sort(Comparator.comparingInt(o -> o.getDefinition().getOrder()));
-
-		MultiValueMap<String, Object> mlmap = new LinkedMultiValueMap<>(toMatch.size() + discriminatorMapping.size());
-
-		List<QFElementMatch> isArrayLevel = toMatch.stream().filter(e -> e.getDefinition().isSubQuery())
-				.collect(Collectors.toList());
-
-		toMatch.removeAll(isArrayLevel);
-
-		// Discriminators
-		processDiscriminators(root, criteriaBuilder, predicatesMap, pathsMap, mlmap);
-
-		// ArrayLevel
-		processArrayLevel(root, query, criteriaBuilder, predicatesMap, mlmap, isArrayLevel);
-
-		// Elements
-		processElements(root, criteriaBuilder, predicatesMap, pathsMap, toMatch, mlmap);
-
-		// JSON elements
-		processJsonElements(root, criteriaBuilder, predicatesMap, pathsMap);
-
-		// Collections
-		processCollections(root, criteriaBuilder, predicatesMap, pathsMap);
-
+		// Query distinct
 		query.distinct(distinct);
 
-		var sortList = defaultSortEnabled ? defaultSorting : sortDefinitionList;
-		if (!sortList.isEmpty()) {
-			LOGGER.trace("Adding all sort operations");
-			query.orderBy(QueryUtils.parseOrders(sortList, criteriaBuilder, root, pathsMap));
+		// Process sort
+		processSort(root, criteriaBuilder, query, pathsMap);
+
+		List<QFSpecificationPart> sortedParts = specificationsWarp.getAllPartsSorted();
+
+		MultiValueMap<String, Object> mlmap = new LinkedMultiValueMap<>(sortedParts.size());
+
+		for (QFSpecificationPart part : sortedParts) {
+			part.processPart(root, query, criteriaBuilder, predicatesMap, pathsMap, mlmap, spelResolver, entityClass);
 		}
 
 		Predicate finalPredicate = parseFinalPredicate(criteriaBuilder, predicatesMap);
@@ -774,140 +752,12 @@ public class QueryFilter<E> implements Specification<E> {
 		return finalPredicate;
 	}
 
-	private void processDiscriminators(Root<E> root, CriteriaBuilder criteriaBuilder,
-			Map<String, List<Predicate>> predicatesMap, Map<String, Path<?>> pathsMap,
-			MultiValueMap<String, Object> mlmap) {
-		for (QFDiscriminatorMatch match : discriminatorMapping) {
-
-			List<Predicate> orDiscriminators = new ArrayList<>();
-
-			if (match.isRoot()) {
-				for (Class<?> clazz : match.getMatchingClasses()) {
-					orDiscriminators.add(criteriaBuilder.equal(root.type(), clazz));
-					mlmap.add(match.getDefinition().getFilterName(), clazz);
-				}
-
-			} else {
-
-				for (Class<?> clazz : match.getMatchingClasses()) {
-					orDiscriminators.add(criteriaBuilder
-							.equal(QueryUtils.getObject(root, match.getPath(), pathsMap, false).type(), clazz));
-					mlmap.add(match.getDefinition().getFilterName(), clazz);
-				}
-
-			}
-
-			predicatesMap.computeIfAbsent(match.getDefinition().getFilterName(), k -> new ArrayList<>())
-					.add(criteriaBuilder.or(orDiscriminators.toArray(new Predicate[0])));
-
-		}
-
-	}
-
-	private void processArrayLevel(Root<E> root, CriteriaQuery<?> query, CriteriaBuilder criteriaBuilder,
-			Map<String, List<Predicate>> predicatesMap, MultiValueMap<String, Object> mlmap,
-			List<QFElementMatch> isArrayLevel) {
-		for (QFElementMatch arrayLevelMatch : isArrayLevel) {
-
-			Map<String, Path<?>> subSelecthMap = new HashMap<>();
-
-			arrayLevelMatch.initialize(spelResolver, mlmap);
-
-			if (!arrayLevelMatch.needToEvaluate()) {
-				continue;
-			}
-
-			int index = 0;
-			for (List<QFPath> paths : arrayLevelMatch.getPaths()) {
-
-				Subquery<E> subquery = query.subquery(entityClass);
-				Root<E> newRoot = subquery.from(entityClass);
-
-				subquery.select(newRoot);
-
-				Path<?> pathFinal = QueryUtils.getObject(newRoot, paths, subSelecthMap, false);
-
-				QFOperationEnum op = arrayLevelMatch.getOperation();
-				if (op == QFOperationEnum.NOT_EQUAL) {
-					op = QFOperationEnum.EQUAL;
-				}
-
-				subquery.where(op.generatePredicate(pathFinal, criteriaBuilder, arrayLevelMatch, index, mlmap));
-
-				Predicate finalPredicate = criteriaBuilder.in(root).value(subquery);
-
-				if (arrayLevelMatch.getOperation() == QFOperationEnum.NOT_EQUAL) {
-					finalPredicate = criteriaBuilder.not(finalPredicate);
-				}
-
-				predicatesMap.computeIfAbsent(arrayLevelMatch.getDefinition().getFilterName(), k -> new ArrayList<>())
-						.add(finalPredicate);
-
-				index++;
-			}
-
-		}
-	}
-
-	private void processElements(Root<E> root, CriteriaBuilder criteriaBuilder,
-			Map<String, List<Predicate>> predicatesMap, Map<String, Path<?>> pathsMap, List<QFElementMatch> toMatch,
-			MultiValueMap<String, Object> mlmap) {
-		for (QFElementMatch match : toMatch) {
-
-			match.initialize(spelResolver, mlmap);
-
-			if (!match.needToEvaluate()) {
-				continue;
-			}
-
-			int index = 0;
-
-			List<Predicate> predicates = new ArrayList<>();
-
-			for (List<QFPath> paths : match.getPaths()) {
-				predicates.add(match.getOperation().generatePredicate(
-						QueryUtils.getObject(root, paths, pathsMap, false), criteriaBuilder, match, index, mlmap));
-				index++;
-			}
-
-			Predicate surrondingPredicate = match.getDefinition().getPredicateOperation().getPredicate(criteriaBuilder,
-					predicates);
-
-			predicatesMap.computeIfAbsent(match.getDefinition().getFilterName(), t -> new ArrayList<>())
-					.add(surrondingPredicate);
-
-		}
-	}
-
-	private void processJsonElements(Root<E> root, CriteriaBuilder criteriaBuilder,
-			Map<String, List<Predicate>> predicatesMap, Map<String, Path<?>> pathsMap) {
-		for (QFJsonElementMatch match : jsonMapping) {
-			predicatesMap.computeIfAbsent(match.getDefinition().getFilterName(), t -> new ArrayList<>())
-					.add(match.getOperation().generateJsonPredicate(
-							QueryUtils.getObject(root, match.getDefinition().getPaths(), pathsMap, true),
-							criteriaBuilder, match));
-		}
-	}
-
-	@SuppressWarnings("unchecked")
-	private void processCollections(Root<E> root, CriteriaBuilder criteriaBuilder,
-			Map<String, List<Predicate>> predicatesMap, Map<String, Path<?>> pathsMap) {
-		LOGGER.trace("Creating all collection matching elements on filter");
-		for (QFCollectionMatch match : collectionMapping) {
-
-			Path<?> expressionPath = QueryUtils.getObject(root, match.getDefinition().getPaths(), pathsMap, true);
-
-			Expression<? extends java.util.Collection<?>> expression;
-
-			try {
-				expression = (Expression<? extends java.util.Collection<?>>) expressionPath;
-			} catch (ClassCastException e) {
-				throw new QFCollectionException(match.getDefinition().getFilterName(), e.getMessage());
-			}
-
-			predicatesMap.computeIfAbsent(match.getDefinition().getFilterName(), t -> new ArrayList<>())
-					.add(match.getOperation().generateCollectionPredicate(expression, criteriaBuilder, match));
-
+	private void processSort(Root<E> root, CriteriaBuilder criteriaBuilder, CriteriaQuery<?> query,
+			Map<String, Path<?>> pathsMap) {
+		var sortList = defaultSortEnabled ? defaultSorting : sortDefinitionList;
+		if (!sortList.isEmpty()) {
+			LOGGER.trace("Adding all sort operations");
+			query.orderBy(QueryUtils.parseOrders(sortList, criteriaBuilder, root, pathsMap));
 		}
 	}
 
